--- a/locale/ja_JP/installer.xml
+++ b/locale/ja_JP/installer.xml
@@ -63,4 +63,10 @@
 	<message key="installer.releaseNotes">リリースノート</message>
 	<message key="installer.securitySettings">セキュリティ設定</message>
 	<message key="installer.skipFilesDir">必要なサブディレクトリを作成しない（マニュアルインストール時にのみ有効）</message>
+	<message key="installer.configFileError"><![CDATA[設定ファイル <tt>config.inc.php</tt> が存在しないか，あるいは読み込めません。]]></message>
+	<message key="installer.locale.maybeIncomplete">マークがついているロケールは完全ではありません。</message>
+	<message key="installer.checkNo"><![CDATA[<span class="formError">いいえ</span>]]></message>
+	<message key="installer.installParseDBFileError"><![CDATA[データベースインストールファイル <tt>{$file}</tt> のパースエラー。]]></message>
+	<message key="installer.installParseEmailTemplatesFileError"><![CDATA[メールテンプレートファイル <tt>{$file}</tt> のパースエラー。]]></message>
+	<message key="installer.installFileError"><![CDATA[インストールファイル<tt>dbscripts/xml/install.xml</tt> が存在しない，または読み込めません。]]></message>
 </locale>
