--- a/locale/ja_JP/reader.xml
+++ b/locale/ja_JP/reader.xml
@@ -154,4 +154,15 @@
 	<message key="rt.version.title">名称</message>
 	<message key="rt.version">バージョン</message>
 	<message key="rt.viewMetadata">インデックス化されるメタデータ</message>
+	<message key="rt.admin.sharing.basic">基本設定</message>
+	<message key="rt.admin.sharing.buttonStyleLabel">ボタンのスタイル</message>
+	<message key="rt.admin.sharing.dropDownMenuLabel">ドロップダウンメニューを使用する</message>
+	<message key="rt.admin.sharing.advanced">詳細設定 (任意)</message>
+	<message key="rt.admin.sharing.languageLabel">言語</message>
+	<message key="rt.admin.sharing.logolabel">ロゴ</message>
+	<message key="rt.admin.sharing.logoColorLabel">ロゴの色</message>
+	<message key="rt.email.needLogin"><![CDATA[* <a target="_parent" href="{$loginUrl}">登録</a> が必要]]></message>
+	<message key="comments.titleRequired">コメントタイトルが必要です。</message>
+	<message key="rt.admin.sharing.userNameLabel">AddThis.com のユーザ名</message>
+	<message key="rt.admin.sharing.customizationLink"><![CDATA[<a href="http://www.addthis.com/help/customize/custom-button/">AddThis.com customization documentation</a> を参照してください。]]></message>
 </locale>
