#4622# Language updates continued

--- a/locale/ja_JP/admin.xml
+++ b/locale/ja_JP/admin.xml
@@ -81,4 +81,5 @@
 	<message key="admin.systemConfigFileReadError"><![CDATA[設定ファイル <tt>config.inc.php</tt> が存在しないか，読み込めない，あるいは無効です。]]></message>
 	<message key="admin.displayConfigFileInstructions"><![CDATA[アップデートされる設定内容は下記のとおりです。設定の変更を適用するために <tt>config.inc.php</tt> をテキストエディタで開き，下記のテキストフィールドの記述と置き換えてください。]]></message>
 	<message key="admin.serverInformationDescription"><![CDATA[基本となるOSとサーバソフトウェアのバージョン。このサーバの詳細なPHP環境設定を見るには, <span class="highlight">PHP環境設定情報</span>をクリックしてください。]]></message>
+	<message key="admin.configFileUpdatedInstructions"><![CDATA[あなたの設定ファイルは正常にアップデートされました。もしあなたのサイトがまだ正常に機能していない場合は，<tt>config.inc.php</tt> を直接編集して設定を修正する必要があるかもしれません。]]></message>
 </locale>
